fixed phone alignement

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -345,6 +345,8 @@
     flex-direction: column;
     width: 100%;
     max-width: 300px;
+    margin-left: auto;
+    max-width: auto;
   }
 
   .primaryBtn,
